--- a/ImgurProject/app/src/main/AndroidManifest.xml
+++ b/ImgurProject/app/src/main/AndroidManifest.xml
@@ -23,7 +23,8 @@
         <activity
             android:name=".Activity.UploadActivity"
             android:label="@string/title_activity_upload"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar"
+            android:screenOrientation="portrait"></activity>
     </application>
 
 </manifest>
