--- a/ImgurProject/app/build.gradle
+++ b/ImgurProject/app/build.gradle
@@ -26,6 +26,6 @@ dependencies {
     compile 'com.android.support:design:23.1.1'
     compile 'com.squareup.retrofit:retrofit:2.0.0-beta2'
     compile 'com.squareup.retrofit:converter-gson:2.0.0-beta2'
-    compile 'pl.droidsonroids.gif:android-gif-drawable:1.1.+'
-    compile 'com.koushikdutta.ion:ion:2.+'
+    compile 'com.github.bumptech.glide:glide:3.6.1'
+    compile 'com.android.support:support-v4:23.1.1'
 }
