--- a/ImgurProject/app/src/main/AndroidManifest.xml
+++ b/ImgurProject/app/src/main/AndroidManifest.xml
@@ -26,6 +26,11 @@
             android:label="@string/title_activity_upload"
             android:theme="@style/AppTheme.NoActionBar"
             android:screenOrientation="portrait"></activity>
+        <activity
+            android:name=".Activity.SettingsActivity"
+            android:label="@string/title_activity_settings"
+            android:theme="@style/AppTheme.NoActionBar"
+            android:screenOrientation="portrait"></activity>
     </application>
 
 </manifest>
